# wast2json-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  json.rs  lib.rs  main.rs  registry.rs
tests/: tests.rs
tests/local/: module-binary.txt
tests/local/parse/: bad-input-command.txt  bad-output-command.txt
tests/local/parse/assert/: assert-after-module.txt  assertinvalid-binary-module.txt  assertinvalid.txt  assertmalformed.txt  assertreturn-arithmetic-nan.txt  assertreturn-canonical-nan.txt  assertreturn.txt  bad-assert-before-module.txt  bad-assertreturn-non-const.txt  bad-assertreturn-too-few.txt  bad-assertreturn-too-many.txt  bad-assertreturn-unknown-function.txt  bad-invoke-no-module.txt  bad-invoke-too-few.txt  bad-invoke-too-many.txt  bad-invoke-unknown-function.txt  invoke.txt
tests/local/typecheck/: bad-assertreturn-invoke-type-mismatch.txt  bad-assertreturn-type-mismatch.txt  bad-invoke-type-mismatch.txt
